tests/feature_tests/error_main1.c
// error: 'main' function must have integer return type
void main() {}
